--- a/SimpleLocationWeb/Pages/Admin/Order/OrderList.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/Order/OrderList.cshtml
@@ -15,9 +15,9 @@
     <table id="DT_load" class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-                <th>Nom</th>
-                <th>Email</th>
+               <th>Nom Client</th>
                 <th>Prix Total</th>
+                <th>Date de Création Location</th>
                 <th></th>
             </tr>
         </thead>
