--- a/SimpleLocationWeb/Pages/Customer/OrderCustomer/OrderCustomerList.cshtml
+++ b/SimpleLocationWeb/Pages/Customer/OrderCustomer/OrderCustomerList.cshtml
@@ -13,7 +13,7 @@
     </div>
     <br /><br />
   
-    <table class="table table-bordered table-striped" style="width:100%">
+    <table id="DT_load" class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
                 <th>Date de Commande</th>
