--- a/SimpleLocationWeb/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/SimpleLocationWeb/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Vous avez oublié votre mot de passe ?";
 }
 
 <h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
+<h2>Saisissez votre email.</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,7 +16,7 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Réinitialiser Mot de Passe</button>
         </form>
     </div>
 </div>
