--- a/SimpleLocationWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SimpleLocationWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,7 +13,7 @@
 }
 
 
-<div class="row">
+<div class="container_register">
     <div class="container_register_form_image">
         <div class="col-md-4 container_registerForm">
             <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
@@ -29,7 +29,8 @@
                     }
                 }
                 <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div asp-validation-summary="All"></div>
+                @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
                 <div class="form-floating my-2">
                     <input asp-for="Input.FirstName" class="form-control" aria-required="true" />
                     <label asp-for="Input.FirstName">Nom</label>
