--- a/SimpleLocationWeb/Pages/Admin/CarBrands/Create.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/CarBrands/Create.cshtml
@@ -9,7 +9,7 @@
         </div>
         <div asp-validation-summary="All"></div>
         <div class="mb-3">
-            <label asp-for="CarBrand.Name">Nom Marque</label>
+            <label asp-for="CarBrand.Name">Marque</label>
             <input type="text" asp-for="CarBrand.Name" class="form-control" />
             <span asp-validation-for="CarBrand.Name" class="text-danger"></span>
         </div>
