--- a/SimpleLocationWeb/Pages/Customer/Cart/Index.cshtml
+++ b/SimpleLocationWeb/Pages/Customer/Cart/Index.cshtml
@@ -5,8 +5,9 @@
     <br />
     @if (Model.LocationCarCartList.Count() == 0)
     {
-        <div>
-            <h3>Veuillez ajouter vos location au panier</h3>
+        <div class="container_image_text_panier">
+            <h3 class="text_panier">Veuillez ajouter vos location au panier</h3>
+            <img src="/images/website/panier_vide.jpg"/>
         </div>
     }
     else
@@ -16,64 +17,69 @@
                 <div class="card-header bg-dark text-light ml-0">
                     <div class="row">
                         <div class="col-6 pt-2">
-                            Shopping Cart
+                            Votre Panier <i class="bi bi-cart-check-fill cart"></i>
                         </div>
-                        <div class="col-6 text-end">
-                            <a href="~/Customer/Home/Index" class="btn btn-outline-info btn-sm">Continue Shopping</a>
-                        </div>
+                        @*<div class="col-6 text-end">
+                            <a href="~/Customer/Home/Index" class="btn btn-outline-info btn-sm">Retour</a>
+                        </div>*@
                     </div>
                 </div>
                 <div class="card-body">
-                    @foreach (var item in Model.LocationCarCartList)
-                    {
-                        <div class="row">
+                    <div class="container_car_cart">
+                        @foreach (var item in Model.LocationCarCartList)
+                        {
+                            <div class="row">
+                                <div class="container_image_carbrand_carname">
+                                    <div class="d-none d-lg-block col-lg-2 text-center py-2">
+                                        <img src="@item.Car.Image" class="rounded" width="120" height="80" />
+                                    </div>
 
-                            <div class="d-none d-lg-block col-lg-2 text-center py-2">
-                                <img src="@item.Car.Image" class="rounded" width="120" height="80" />
+                                    <div class="col-12 text-sm-center text-md-start col-md-5 pt-md-4 container_carbrand_carname ">
+                                        <h4><strong>@item.Car.Name</strong></h4>
+                                        <div class="badge bg-primary text-center" style="font-size:12px">
+                                            @item.Car.Category.Name
+                                        </div>
+                                        <div class="badge bg-primary text-center" style="font-size:12px">
+                                            @item.Car.CarBrand.Name
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="col-12 text-sm-center text-md-start col-md-5 row pt-3 container_price_button">
+                                    <div class="col-4 text-md-right pt-md-3" style="padding-top:5px;">
+                                        <h6 class="container_price"><strong>$@item.Car.Price<span class="text-muted">x</span>@item.Count</strong></h6>
+                                    </div>
+                                    <div class="col-6 col-sm-4 col-lg-6 ">
+                                        <button type="submit" class="btn btn-primary" asp-page-handler="plus" asp-route-cartId="@item.Id">
+                                            <i class="bi bi-plus-square"></i>
+                                        </button>
+                                        <button type="submit" class="btn btn-danger" asp-page-handler="minus" asp-route-cartId="@item.Id">
+                                            <i class="bi bi-dash-square"></i>
+                                        </button>
+                                    </div>
+                                    <div class="col-2 col-sm-4 col-lg-2 text-right">
+                                        <button type="submit" class="btn btn-outline-danger" asp-page-handler="remove" asp-route-cartId="@item.Id">
+                                            <i class="bi bi-trash-fill"></i>
+                                        </button>
+                                    </div>
+                                </div>
+
                             </div>
 
-                            <div class="col-12 text-sm-center text-md-start col-md-5 pt-md-4">
-                                <h4><strong>@item.Car.Name</strong></h4>
-                                <div class="badge bg-primary text-center" style="font-size:12px">
-                                    @item.Car.Category.Name
-                                </div>
-                                <div class="badge bg-primary text-center" style="font-size:12px">
-                                    @item.Car.CarBrand.Name
-                                </div>
-                            </div>
 
-                            <div class="col-12 text-sm-center text-md-start col-md-5 row pt-3">
-                                <div class="col-4 text-md-right pt-md-3" style="padding-top:5px;">
-                                    <h6><strong>$@item.Car.Price<span class="text-muted">x</span>@item.Count</strong></h6>
-                                </div>
-                                <div class="col-6 col-sm-4 col-lg-6">
-                                    <button type="submit" class="btn btn-primary" asp-page-handler="plus" asp-route-cartId="@item.Id">
-                                        <i class="bi bi-plus-square"></i>
-                                    </button>
-                                    <button type="submit" class="btn btn-danger" asp-page-handler="minus" asp-route-cartId="@item.Id">
-                                        <i class="bi bi-dash-square"></i>
-                                    </button>
-                                </div>
-                                <div class="col-2 col-sm-4 col-lg-2 text-right">
-                                    <button type="submit" class="btn btn-outline-danger" asp-page-handler="remove" asp-route-cartId="@item.Id">
-                                        <i class="bi bi-trash-fill"></i>
-                                    </button>
-                                </div>
-                            </div>
-
-                        </div>
-
-
-                        <hr />
-                    }
+                            <hr />
+                        }
+                    </div>
+                    
                     <div class="row">
                         <div class="col-12 col-md-5">
                         </div>
                         <div class="col-12 col-md-6 offset-md-1 col-lg-4 offset-lg-3 pr-4">
                             <ul class="list-group">
                                 <li class="list-group-item d-flex justify-context-between bg-light">
-                                    <span class="text-info"> Total (USD) </span>
-                                    <strong class="text-info text-center">$@Model.CartTotal</strong>
+                                    <span class="text-info container_total_price_label"> Total: </span>
+                                    <strong class="text-info text-center container_total_price">@Model.CartTotal€</strong>
                                 </li>
                             </ul>
                         </div>
@@ -82,7 +88,7 @@
                 </div>
                 <div class="card-footer">
                     <div class="col-12 col-lg-4 offset-lg-8 col-md-6 offset-md-6">
-                        <a asp-page="Summary" class="btn btn-success form-control">Summary</a>
+                        <a asp-page="Summary" class="btn btn-success form-control">Résumé</a>
                     </div>
                 </div>
             </div>
