--- a/SimpleLocationWeb/Pages/Customer/Cart/Summary.cshtml
+++ b/SimpleLocationWeb/Pages/Customer/Cart/Summary.cshtml
@@ -11,10 +11,10 @@
                 <div class="card-header bg-dark text-light ml-0">
                     <div class="row">
                         <div class="col-6 pt-2">
-                            <h3 class="text-white-50">Order Summary</h3>
+                            <h3 class="text-white-50">Résumé Location</h3>
                         </div>
                         <div class="col-6 text-end">
-                            <a asp-page="Index" class="btn btn-outline-info btn-sm">Back to Cart</a>
+                            <a asp-page="Index" class="btn btn-outline-info btn-sm">Retour Panier</a>
                         </div>
                     </div>
                 </div>
@@ -24,13 +24,13 @@
                             <div class="col-12 col-lg-6 pb-4">
                                 <div class="row">
                                     <h4 class="d-flex justify-content-between align-items-center mb-3">
-                                        <span class="text-info">Pickup Details:</span>
+                                        <span class="text-info">Détails de la Location:</span>
                                     </h4>
                                 </div>
                                 <div asp-validation-summary="All"></div>
                                 <div class="row my-1">
                                     <div class="col-3">
-                                        <label>Name</label>
+                                        <label>Nom:</label>
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.PickupName" class="form-control"/>
@@ -39,7 +39,7 @@
                                 </div>
                                 <div class="row my-1">
                                     <div class="col-3">
-                                        <label>Phone Number</label>
+                                        <label>Téléphone:</label>
                                     </div>
                                     <div class="col-9">
                                         <input asp-for="OrderHeader.PhoneNumber" class="form-control" />
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="row my-1">
                                     <div class="col-3">
-                                        <label>Pick Up Date</label>
+                                        <label>Date de Début:</label>
                                     </div>
                                     <div class="col-9">
                                         <input value="" asp-for="OrderHeader.PickUpDate" type="date" class="form-control" />
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="row my-1">
                                     <div class="col-3">
-                                        <label>Pick up Time</label>
+                                        <label>Heure de Début:</label>
                                     </div>
                                     <div class="col-9">
                                         <input value="" asp-for="OrderHeader.PickUpTime" type="time" class="form-control" />
@@ -66,7 +66,7 @@
                                 </div>
                                 <div class="row my-1">
                                     <div class="col-3">
-                                        <label>Pick Date Of Return</label>
+                                        <label>Date de Fin:</label>
                                     </div>
                                     <div class="col-9">
                                         <input value="" asp-for="OrderHeader.PickDateOfReturn" type="date" class="form-control" />
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="row my-1">
                                     <div class="col-3">
-                                        <label>Pick Time Of Return</label>
+                                        <label>Heure de Fin:</label>
                                     </div>
                                     <div class="col-9">
                                         <input value="" asp-for="OrderHeader.PickTimeOfReturn" type="time" class="form-control" />
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="row my-1">
                                     <div class="col-3">
-                                        <label>Additional Instruction:</label>
+                                        <label>Instruction complémentaire:</label>
                                     </div>
                                     <div class="col-9">
                                         <textarea asp-for="OrderHeader.Comments" style="height:100px;" class="form-control"></textarea>
@@ -94,22 +94,22 @@
 
                             <div class="col-12 col-lg-5 offset-lg-1">
                                 <h4 class="d-flex justify-content-between align-items-center mb-3">
-                                    <span class="text-info">Order Summary:</span>
+                                    <span class="text-info">Résumé Location:</span>
                                 </h4>
                                 <ul class="list-group mb-3">
                                     @foreach(var detail in Model.LocationCarCartList){
                                         <li class="list-group-item d-flex justify-content-between">
                                             <div>
                                                 <h6 class="my-0">@detail.Car.Name</h6>
-                                                <small class="text-muted">Quantity: @detail.Count</small>
+                                                <small class="text-muted">Nombre de Jour: @detail.Count</small>
                                             </div>
                                             <span class="text-muted">@(detail.Car.Price * @detail.Count)</span>
                                         </li>
                                     }
                                     <li class="list-group-item d-flex justify-content-between bg-light">
                                         <div>
-                                            <small class="text-muted">Total (USD)</small>
-                                            <strong class="text-info">$@Model.OrderHeader.OrderTotal</strong>
+                                            <small class="text-muted">Total</small>
+                                            <strong class="text-info">@Model.OrderHeader.OrderTotal€</strong>
                                         </div>
                                     </li>
                                 </ul>
@@ -120,7 +120,7 @@
                 <div class="card-footer">
                     <div class="row">
                         <div class="col-12 col-md-4 offset-md-8">
-                            <button type="submit" id="btnPlaceOrder" value="Place Order" class="btn btn-success form-control">Place Order</button>
+                            <button type="submit" id="btnPlaceOrder" value="Place Order" class="btn btn-success form-control">Payer</button>
                         </div>
                     </div>
                 </div>
@@ -133,6 +133,7 @@
 
     @{
         <partial name="_ValidationScriptsPartial" />
+        //<partial name="_Notification" />
     }
 }
 
