--- a/SimpleLocationWeb/Pages/Shared/_Layout.cshtml
+++ b/SimpleLocationWeb/Pages/Shared/_Layout.cshtml
@@ -40,11 +40,11 @@
         </main>
     </div>
 
-    <footer class="footer text-muted bg-primary">
+    @*<footer class="footer text-muted bg-primary">
         <div class="container">
             &copy; 2023 - SimpleLocation 
         </div>
-    </footer>
+    </footer>*@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
