--- a/SimpleLocationWeb/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/SimpleLocationWeb/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "Access denied";
 }
 
-<header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
-</header>
+<div class="container_image_access_denied">
+    <img src="/images/website/accessdenied.jpg" class="image_access_denied" />
+</div>
