--- a/SimpleLocationWeb/Pages/Customer/OrderCustomer/OrderCustomerDetails.cshtml
+++ b/SimpleLocationWeb/Pages/Customer/OrderCustomer/OrderCustomerDetails.cshtml
@@ -19,7 +19,7 @@
                         Nom
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailVM.OrderHeader.PickupName" disabled class="form-control" />
+                        @Model.OrderDetailVM.OrderHeader.PickupName
                     </div>
                 </div>
                 <div class="form-group row py-1">
@@ -27,7 +27,7 @@
                         Email
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailVM.OrderHeader.User.Email" disabled class="form-control" />
+                        @Model.OrderDetailVM.OrderHeader.User.Email
                     </div>
                 </div>
                 <div class="form-group row py-1">
@@ -35,7 +35,7 @@
                         Téléphone
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailVM.OrderHeader.PhoneNumber" disabled class="form-control" />
+                        @Model.OrderDetailVM.OrderHeader.PhoneNumber
                     </div>
                 </div>
                 <div class="form-group row py-1">
@@ -43,7 +43,7 @@
                         Prix Total
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailVM.OrderHeader.OrderTotal" disabled class="form-control" />
+                        @Model.OrderDetailVM.OrderHeader.OrderTotal
                     </div>
                 </div>
                 <div class="form-group row py-1">
@@ -51,7 +51,7 @@
                         Date de Début
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailVM.OrderHeader.PickUpDate" disabled class="form-control" />
+                        @Model.OrderDetailVM.OrderHeader.PickUpDate.ToString("dd/MM/yyyy")
                     </div>
                 </div>
                 <div class="form-group row py-1">
@@ -59,15 +59,7 @@
                         Heure de Début
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailVM.OrderHeader.PickUpTime" type="time" disabled class="form-control" />
-                    </div>
-                </div>
-                <div class="form-group row py-1">
-                    <div class="col-md-3 col-12 text-primary">
-                        Heure de fin
-                    </div>
-                    <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailVM.OrderHeader.PickTimeOfReturn" type="time" disabled class="form-control" />
+                        @Model.OrderDetailVM.OrderHeader.PickUpTime.ToString("HH:mm")
                     </div>
                 </div>
                 <div class="form-group row py-1">
@@ -75,7 +67,15 @@
                         Date de Fin
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailVM.OrderHeader.PickDateOfReturn" disabled class="form-control" />
+                        @Model.OrderDetailVM.OrderHeader.PickDateOfReturn.ToString("dd/MM/yyyy")
+                    </div>
+                </div>
+                <div class="form-group row py-1">
+                    <div class="col-md-3 col-12 text-primary">
+                        Heure de fin
+                    </div>
+                    <div class="col-md-9 col-12">
+                        @Model.OrderDetailVM.OrderHeader.PickTimeOfReturn.ToString("HH:mm")
                     </div>
                 </div>
                 <div class="form-group row py-1">
@@ -83,7 +83,7 @@
                         Date Création Location
                     </div>
                     <div class="col-md-9 col-12">
-                        <input asp-for="OrderDetailVM.OrderHeader.OrderDate" disabled class="form-control" />
+                        @Model.OrderDetailVM.OrderHeader.OrderDate.ToString("dd/MM/yyyy HH:mm")
                     </div>
                 </div>
                 <div class="form-group row py-1">
