--- a/SimpleLocationWeb/wwwroot/css/site.css
+++ b/SimpleLocationWeb/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 
-@media (min-width: 1600px) {
+@media (min-width: 481px) {
     html {
         font-size: 16px;
     }
@@ -64,7 +64,7 @@
     img.image_panier{
         width:300px;
         height:300px;
-    }
+    }   
     h3.summary{
         font-size: 15px;
     }
@@ -255,6 +255,12 @@ p{
     width: 700px;
     margin: 0 0 50px 0;
     padding: 0;
+}
+
+div.container_image_access_denied{
+    margin: 75px 0 0 0;
+    display: flex;
+    justify-content: center;
 }
 
 
